--- a/Project1/log.css
+++ b/Project1/log.css
@@ -27,7 +27,7 @@ body {
     padding: 40px;
 }
 .wrapper .right {
-    width: 50%;
+    width: 100%;
     height: 87%;
     padding: 40px;
 }
@@ -48,13 +48,11 @@ body {
 }
 
 .wrapper .left p {
-    text-align: center;
-    vertical-align: middle;
-    text-transform: uppercase;
+    text-align: left;
+
     color: white;
-    font-size: 20px;
-    line-height: 50px;
-    letter-spacing: 3px;
+    font-size: 18px;
+ 
     
 }
 
